# FailableResponse

./: README.md  pyproject.toml
src/failable_response/: dataclass_response.py  pydantic_response.py
tests/: test_dataclass_response.py  test_pydantic_response.py
